--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@ r_text[34] = "-10 + (-24)"
 r_text[35] = "-6 + (+14)"
 document.write(r_text[i]);
 </script>
+<form>
+  <button formaction="http://stackoverflow.com">Go to Stack Overflow!</button>
+</form>
 </body>
 </html>
